--- a/Game/style.css
+++ b/Game/style.css
@@ -11,7 +11,7 @@
     background-color: #fc0;
     margin-right: 10px;
     vertical-align: top;
-    height: 100%;
+    height: 605px;
 }
 
 .title {
